WIP change tag analytics

--- a/public/index.html
+++ b/public/index.html
@@ -39,14 +39,14 @@
     </style>
 
     
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-1JM8DRG5K3"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KN4Z9JFEGK"></script>
 <script>
 var doNotTrack = false;
 if (!doNotTrack) {
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
-	gtag('config', 'G-1JM8DRG5K3', { 'anonymize_ip': false });
+	gtag('config', 'G-KN4Z9JFEGK', { 'anonymize_ip': false });
 }
 </script>
 
@@ -55,7 +55,7 @@ if (!doNotTrack) {
 var doNotTrack = false;
 if (!doNotTrack) {
 	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-	ga('create', 'G-1JM8DRG5K3', 'auto');
+	ga('create', 'G-KN4Z9JFEGK', 'auto');
 	
 	ga('send', 'pageview');
 }
