WIP change title

--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@ if (!doNotTrack) {
         <section class="parallax" style="background-image: url('/img/parallax-middle.webp');">
         </section>
         <section class="container mx-auto p-6">
-            <h2 class="text-3xl text-green-300 font-bold text-center">Certificats</h2>
+            <h2 class="text-3xl text-green-300 font-bold text-center">Formations</h2>
 
             
             <div class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-3 gap-5">
