WIP change CV and parallax

--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@ if (!doNotTrack) {
     <article class="lg:px-0">
 
         <section class="parallax" style="background-image: url('/img/parallax-top.webp');">
-            <h1 class="title text-yellow-300 font-bold text-6xl">Développeur web web mobile</h1>
+            <h1 class="title text-yellow-300 font-bold text-6xl">Développeur Web Web Mobile</h1>
         </section>
         <section class="container mx-auto p-6 flex flex-col">
             <h2 class="text-3xl text-green-300 font-bold text-center p-6">Thierry Charriot</h2>
@@ -104,7 +104,7 @@ if (!doNotTrack) {
             </a>
         </section>
           
-        <section class="parallax" style="background-image: url('/img/parallax-middle.webp');">
+        <section class="parallax parallax-15" style="background-image: url('/img/parallax-middle.webp');">
         </section>
         <section class="container mx-auto p-6">
             <h2 class="text-3xl text-green-300 font-bold text-center">Formations</h2>
@@ -162,7 +162,7 @@ if (!doNotTrack) {
             </div>
         </section>
 
-        <section class="parallax" style="background-image: url('/img/parallax-bottom.webp');">
+        <section class="parallax parallax-15" style="background-image: url('/img/parallax-bottom.webp');">
         </section>
     </article>
 
